# tactile-control

./: README.md
tactile-control-lib/: CMakeLists.txt
tactile-control-lib/src/: CMakeLists.txt
tactile-control-lib/src/ExeExample/: CMakeLists.txt  main.cpp
tactile-control-lib/src/TactileControl/: CMakeLists.txt
tactile-control-lib/src/TactileControl/include/TactileControl/: HandController.h  ObjectRecognitionManager.h  TactileControl.h
tactile-control-lib/src/TactileControl/include/TactileControl/data/: Enums.h  GMMData.h  MLData.h  Parameters.h  TaskData.h
tactile-control-lib/src/TactileControl/include/TactileControl/task/: ApproachTask.h  ControlTask.h  StepTask.h  Task.h
tactile-control-lib/src/TactileControl/include/TactileControl/thread/: DataCollectionThread.h  TaskThread.h
tactile-control-lib/src/TactileControl/include/TactileControl/util/: CommonUtil.h  ControllerUtil.h  ICubUtil.h  MLUtil.h  PortUtil.h
tactile-control-lib/src/TactileControl/src/: HandController.cpp  ObjectRecognitionManager.cpp  TactileControl.cpp
tactile-control-lib/src/TactileControl/src/data/: GMMData.cpp  MLData.cpp  TaskData.cpp
tactile-control-lib/src/TactileControl/src/task/: ApproachTask.cpp  ControlTask.cpp  StepTask.cpp  Task.cpp
tactile-control-lib/src/TactileControl/src/thread/: DataCollectionThread.cpp  TaskThread.cpp
tactile-control-lib/src/TactileControl/src/util/: CommonUtil.cpp  ControllerUtil.cpp  ICubUtil.cpp  MLUtil.cpp  PortUtil.cpp
tactile-control-wrapper/: CMakeLists.txt
tactile-control-wrapper/app/applications/: tactileControlWrapper.xml
tactile-control-wrapper/app/contexts/tactileControlWrapper/: confTactileControlLib.ini  confTactileControlLibBlack.ini  confTactileControlLib_iCubGenova01.ini  confTactileControlLib_iCubGenova02.ini  confTactileControlLib_objRec.ini  confTactileControlLib_objRec_iCubGenova01.ini  confTactileControlWrapper.ini  confTactileControlWrapper_objRec.ini  gmmRegressionPortScope.xml
tactile-control-wrapper/app/contexts/tactileControlWrapper/toRemove/: graspingDemoPortScopeConf2F.xml
tactile-control-wrapper/src/: CMakeLists.txt  HandControllerWrapper.cpp  RPCData.cpp  RPCUtil.cpp  main.cpp
tactile-control-wrapper/src/include/tactileControlWrapper/: Enums.h  HandController.h  HandControllerWrapper.h  RPCData.h  RPCUtil.h
